--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Project Title"
-subtitle: "INFO 526 - Summer 2024 - Final Project"
+subtitle: "INFO 526 - Summer 2025 - Final Project"
 author: 
-  - name: "Team name"
+  - name: "Yashi Mi & Nathan Herling"
     affiliations:
       - name: "School of Information, University of Arizona"
 description: "Project description"
