Fixed issues 1 and 3 (from Reviewer 1)

--- a/proposal.qmd
+++ b/proposal.qmd
@@ -282,8 +282,7 @@ gt_table_3 |>
     columns = vars(Variables)
   ) |>
   tab_options(
-    table.width = pct(100)
-  )
+    table.width = pct(100))
 ```
 
 ::: callout-note
