--- a/proposal.qmd
+++ b/proposal.qmd
@@ -264,8 +264,41 @@ Before analysis, we will clean and filter the data using the dplyr package to en
 
 
 To detect spatial clusters of change, we will use the Getis-Ord <em>G*</em> (Local <em>G*</em>) statistic via the <code>spdep</code> package. This analysis will classify each county based on whether it is part of a statistically significant cluster of improvement or decline. Counties will be labeled as hotspots (worsening), coldspots (improving), or not significant, depending on the spatial pattern of their change values.
+Counties will be labeled as:
 
-  In this context, a “significant” spatial cluster refers to a geographic pattern where counties with similar levels of plumbing access (measured by the percentage of people lacking complete plumbing) are more spatially concentrated than would be expected by random chance (Significant hotspots: z ≥ 1.96 → p ≤ 0.05 in the upper tail, Significant coldspots: z ≤ -1.96 → p ≤ 0.05 in the lower tail. The results will be visualized using <code>tmap</code> to create a choropleth map, allowing us to identify where in the U.S. plumbing access is improving or deteriorating in a geographically meaningful way.
+<ul>
+  <li>Hotspots (worsening)</li>
+  <li>Coldspots (improving)</li>
+  <li>Not significant</li>
+</ul>
+
+
+<div class="hypothesis-section" style="border-left: 4px solid #007BFF; padding-left: 16px; margin: 20px 0;">
+
+  <p><strong>To address the question of spatial clustering in plumbing access change (Q2):</strong></p>
+
+  <p>In order to strengthen the analysis and fully frame the spatial hotspot mapping, the following hypothesis has been introduced:</p>
+
+  <p><strong>Hypothesis:</strong> 
+  <em>“Changes in plumbing access over 2022–2023 are spatially clustered, with neighboring counties showing similar directions of change.”</em></p>
+
+  <p><strong>Null Hypothesis:</strong> 
+  <em>“There is no spatial clustering; changes in plumbing access are randomly distributed geographically.”</em></p>
+
+  <p>This hypothesis supports the goal of detecting localized improvements or declines, and justifies the use of spatial statistical techniques (e.g., Local G*) to evaluate clustering significance.</p>
+
+</div>
+
+<p>In this context, a “significant” spatial cluster refers to a geographic pattern where counties with similar levels of plumbing access change are more spatially concentrated than would be expected by chance:</p>
+
+<ul>
+  <li><strong>Hotspots:</strong> z ≥ 1.96 → p ≤ 0.05 (upper tail)</li>
+  <li><strong>Coldspots:</strong> z ≤ -1.96 → p ≤ 0.05 (lower tail)</li>
+</ul>
+
+
+
+   The results will be visualized using <code>tmap</code> to create a choropleth map, allowing us to identify where in the U.S. plumbing access is improving or deteriorating in a geographically meaningful way.
 
 ::: {.scientific-box}
 <style>
