Question1-Yashi update

--- a/index.qmd
+++ b/index.qmd
@@ -42,13 +42,13 @@ Top counties had the highest plumbing insecurity in 2022 and 2023?
 ### Introduction
 
 ::: salmon-box
-<br><b>#ToDo</b><br>
+<br><b>These two datasets provide information on the lack of complete indoor plumbing across U.S. counties in 2022 and 2023. The 2022 dataset includes data from 848 counties, while the 2023 dataset covers 854 counties, reflecting increased reporting in 2023. Each dataset contains seven variables: county ID (geoid), county name, geographic boundaries (geometry), year, total population, number of households lacking plumbing, and the percent lacking plumbing. This analysis focuses on identifying the top counties with the highest plumbing insecurity in each year and examining the geographic distribution of these counties to understand regional patterns of indoor plumbing leakage in the United States.</b><br>
 :::
 
 ### Approach
 
 ::: salmon-box
-<br><b>#ToDo</b><br>
+<br><b>We will identify and visualize the U.S. counties with the highest levels of plumbing insecurity in 2022 and 2023. We first cleaned the data using the dplyr package by sorting counties in descending order of percent lacking plumbing and selecting the top 10 counties. We then created a new variable to classify counties as having greater than 1% or less than 1% plumbing insecurity for color coding in plots. For visualization, we used ggplot2 to create bar graphs displaying the top 10 counties with the highest plumbing insecurity percentages in 2022 and 2023, colored by insecurity level. To visualize the geographic distribution, we loaded a U.S. county shapefile using the tigris package (the geometry information in the datasets were stored as character class strings rather than usable spatial geometry objects), merged it with our top 10 data by county geoid, and created a choropleth map.</b><br>
 :::
 
 ### Analysis
@@ -57,10 +57,133 @@ Top counties had the highest plumbing insecurity in 2022 and 2023?
 <br><b>#ToDo</b><br>
 :::
 
+```{r}
+# - loading package manager
+if (!require(pacman))
+  install.packages(pacman)
+
+# - loading required packages
+pacman::p_load(tidyverse,
+               here,
+               forcats,
+               scales,
+               sf,
+               tidycensus,
+               tigris)
+```
+
+```{r}
+#| label: Water Insecurity
+#| message: false
+# Load water insecurity data from the TidyTuesday project (2025-01-28)
+# This dataset explores social vulnerability and access to complete indoor
+# plumbing across U.S. counties,
+# curated by Niha Pereira and featured in the blog post:
+# "Mapping water insecurity in R with tidycensus"
+# Original data sources include the U.S. Census Bureau (ACS) and the USGS Vizlab’s
+# “Unequal Access to Water” visualization.
+# Repo: 
+# https://github.com/rfordatascience/tidytuesday/tree/main/data/2025/2025-01-28
+water_insecurity_2022 <- read_csv(here("water_insecurity",
+                                       "water_insecurity_2022.csv"))
+water_insecurity_2023 <- read_csv(here("water_insecurity",
+                                       "water_insecurity_2023.csv"))
+glimpse(water_insecurity_2022)
+glimpse(water_insecurity_2023)
+```
+
+```{r}
+Top10_2022<-water_insecurity_2022 |>
+  arrange(desc(percent_lacking_plumbing))|>
+  slice_head(n = 10)|>
+  mutate(name = fct_reorder(name, percent_lacking_plumbing),
+         percentage = case_when(percent_lacking_plumbing > 1 ~ "> 1%",
+         TRUE ~ "≤ 1%"))
+glimpse(Top10_2022)
+```
+
+```{r}
+ggplot(Top10_2022, aes(y=name, x=percent_lacking_plumbing, fill = percentage))+
+  geom_col()+
+  scale_fill_manual(
+    values = c("> 1%" = "#E76F51", "≤ 1%" = "#2A9D8F"))+
+  labs(
+    title = "Top 10 U.S. Counties with Highest Plumbing Insecurity (2022)",
+    x = "Lacking Plumbing",
+    y = ""
+  ) +
+  scale_x_continuous(labels = label_percent(scale = 1))+
+  theme_minimal()+
+   theme(panel.grid = element_blank())
+```
+
+```{r}
+Top10_2023<-water_insecurity_2023 |>
+  arrange(desc(percent_lacking_plumbing))|>
+  slice_head(n = 10)|>
+  mutate(name = fct_reorder(name, percent_lacking_plumbing),
+         percentage = case_when(percent_lacking_plumbing > 1 ~ "> 1%",
+         TRUE ~ "≤ 1%"))
+glimpse(Top10_2023)
+```
+
+```{r}
+ggplot(Top10_2023, aes(y=name, x=percent_lacking_plumbing, fill = percentage))+
+  geom_col()+
+  scale_fill_manual(
+    values = c("> 1%" = "#E76F51", "≤ 1%" = "#2A9D8F"))+
+  labs(
+    title = "Top 10 U.S. Counties with Highest Plumbing Insecurity (2023)",
+    x = "Lacking Plumbing",
+    y = ""
+  ) +
+  scale_x_continuous(labels = label_percent(scale = 1))+
+  theme_minimal()+
+   theme(panel.grid = element_blank())
+```
+
+```{r}
+counties_sf <- counties(cb = TRUE, year = 2022, class = "sf")
+counties_top10_2022 <- counties_sf |>
+  left_join(Top10_2022, by = c("GEOID" = "geoid"))
+glimpse(counties_top10_2022)
+```
+
+```{r}
+ggplot() +
+  geom_sf(data = counties_sf, fill = "grey90", color = "white") +   
+  geom_sf(data = counties_top10_2022, aes(fill = percentage), color = NA) + 
+  scale_fill_manual(
+    values = c("> 1%" = "#E76F51", "≤ 1%" = "#2A9D8F"),na.value = NA,) +
+  labs(
+    title = "Top 10 U.S. Counties with Highest Plumbing Insecurity (2022)") +
+  coord_sf(xlim = c(-180, -60), ylim = c(15, 72)) + 
+  theme_minimal()
+```
+
+```{r}
+counties_sf <- counties(cb = TRUE, year = 2022, class = "sf")
+counties_top10_2023 <- counties_sf |>
+  left_join(Top10_2023, by = c("GEOID" = "geoid"))
+glimpse(counties_top10_2023)
+```
+
+```{r}
+ggplot() +
+  geom_sf(data = counties_sf, fill = "grey90", color = "white") +   
+  geom_sf(data = counties_top10_2023, aes(fill = percentage), color = NA) + 
+  scale_fill_manual(
+    values = c("> 1%" = "#E76F51", "≤ 1%" = "#2A9D8F"),na.value = NA,) +
+  labs(
+    title = "Top 10 U.S. Counties with Highest Plumbing Insecurity (2023)") +
+  coord_sf(xlim = c(-180, -60), ylim = c(15, 72)) + 
+  theme_minimal()
+```
+
 ### Discussion
 
 ::: salmon-box
-<br><b>#ToDo</b><br>
+<br><b>Both the 2022 and 2023 maps show that Arizona and New Mexico counties dominate the highest plumbing insecurity group (\>1%), suggesting persistent disparities in plumbing access across the Southwest. Among these two states, Apache County (Arizona), McKinley County (New Mexico), and Navajo County (Arizona) consistently ranked among the top four counties with the highest plumbing insecurity in both years, indicating enduring infrastructure and access challenges in these regions. Additionally, Alaska counties, including Fairbanks North Star Borough and Matanuska-Susitna Borough, consistently appeared with notable insecurity levels, highlighting infrastructure limitations in remote areas. Overall, plumbing insecurity in the U.S. remains concentrated in specific Southwestern and Alaskan counties, reflecting long-standing infrastructural inequities in these regions.</b><br>
 :::
 
 ## Question 2:
