--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,20 +1,34 @@
 ---
-title: "Project title"
-subtitle: "INFO 526 - Summer 2025 - Final Project"
-author: "Yashi Mi & Nathan Herling"
-title-slide-attributes:
-  data-background-image: images/watercolour_sys02_img34_teacup-ocean.jpg
-  data-background-size: stretch
-  data-background-opacity: "0.7"
-  data-slide-number: none
+title: ""
+subtitle: ""
+author: ""
 format:
   revealjs:
-    theme:  ['data/customtheming.scss']
+    theme: ['data/customtheming.scss']
     css: slide_styles.css
     slide-number: true
+footer: |
+  <div style="
+    position: fixed;
+    bottom: 0;
+    left: 500px;
+    right: 0;
+    height: 50px;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 24px 0 40px;
+    z-index: 9999;
+    box-sizing: border-box;
+  ">
+    <span style="font-size: 1em;">June 27, 2025</span>
+    <img src="images/water_drop_2.png" height="40" style="vertical-align: middle;" />
+  </div>
 editor: visual
 execute:
   echo: false
+
 ---
 
 ```{r}
@@ -50,19 +64,141 @@ knitr::opts_chunk$set(
 data(mtcars)
 mtcars$speed <- mtcars$hp / mtcars$wt
 
-data("penguins")
+# ---- load data here, I guess ..........
 ```
 
-# Using Quarto for presentations
+:::{.banner-container style="margin-bottom: 30px;"}
+![](images/banner_2.png){.banner-image style="max-width: 100%; height: auto;"}
+:::
+
+```{=html}
+<div style="position: relative; display: flex; align-items: flex-start; margin-top: 30px; min-height: 300px;">
+  
+  <!-- Left image -->
+  <div style="flex-shrink: 0; margin-right: 40px;">
+    <img src="images/blue_water_2.png" alt="Water Drop" style="height: 300px;" />
+  </div>
+
+  <!-- Right column: Text + Logo block -->
+  <div style="display: flex; flex-direction: column; justify-content: space-between; height: 300px;">
+    
+    <!-- Text block -->
+    <div style="
+      font-size: 70px;
+      font-weight: bold;
+      font-family: Arial, sans-serif;
+      text-align: left;
+      line-height: 1.4;
+      color: #1B9FAB;
+    ">
+      Plumbing the Data:<br>
+      Mapping U.S. Water Insecurity
+
+      <div style="font-size: 30px; margin-top: 20px; color: #AB0520;">
+        INFO 526 — Summer 2025 — Final Project
+      </div>
+    </div>
+
+    <!-- Logo block with fixed width -->
+    <div style="
+      display: flex;
+      align-items: center;
+      border: 1px solid black;
+      border-radius: 12px;
+      padding: 10px 16px;
+      background-color: #fff;
+      margin-top: 20px;
+      width: 420px;
+    ">
+      <img src="images/data_plumbers.png" alt="Logo" style="height: 60px; margin-right: 16px;" />
+      <span style="
+        font-size: 18px;
+        font-family: Arial, sans-serif;
+        color: #333;
+      ">
+        <strong>The Data Plumbers:</strong> <br>Yashi Mi & Nathan Herling
+      </span>
+    </div>
+  </div>
+</div>
+```
+
+
+
+
 
 ## A Slide with Custom Styling
+## Water Insecurity Animation
 
-This slide uses a red triangle for the slide number and shows the date.
+```{=html}
+<div style="width: 300px; margin: auto;">
+  <svg viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" >
+    <style>
+      /* Droplet animation: fall + fade */
+      .droplet {
+        fill: #1B9FAB;
+        transform-origin: 60px 20px;
+        animation: drop-fall 3s infinite ease-in-out;
+      }
+      @keyframes drop-fall {
+        0% { transform: translateY(0); opacity: 1; }
+        80% { transform: translateY(70px); opacity: 1; }
+        90% { opacity: 0; }
+        100% { transform: translateY(0); opacity: 0; }
+      }
 
-::: triangle-slide-number
-1
-:::
+      /* Ground crack pulse */
+      .crack {
+        stroke: #8B4513;
+        stroke-width: 2;
+        fill: none;
+        transform-origin: 60px 110px;
+        animation: crack-pulse 3s infinite ease-in-out;
+      }
+      @keyframes crack-pulse {
+        0%, 100% { transform: scaleX(1) scaleY(1); opacity: 1; }
+        50% { transform: scaleX(1.2) scaleY(1.2); opacity: 0.6; }
+      }
 
-::: slide-date
-Monday-June-23-2025
-:::
+      /* Tap */
+      .tap {
+        fill: #555;
+      }
+    </style>
+
+    <!-- Tap -->
+    <rect class="tap" x="50" y="0" width="20" height="30" rx="4" ry="4" />
+    <rect class="tap" x="58" y="30" width="4" height="10" rx="2" ry="2" />
+
+    <!-- Droplet -->
+    <circle class="droplet" cx="60" cy="20" r="6" />
+
+    <!-- Ground line -->
+    <line x1="0" y1="110" x2="120" y2="110" stroke="#654321" stroke-width="4" />
+
+    <!-- Cracks -->
+    <path class="crack" d="M40 110 L50 100 L60 110" />
+    <path class="crack" d="M80 110 L70 100 L60 110" />
+  </svg>
+</div>
+
+```
+##  slide ..
+
+
+##  slide ..
+
+
+##  slide ..
+
+
+##  slide ..
+
+
+##  slide ..
+
+
+##  slide ..
+
+
+##  slide ..
